# AI-Artist

./: .dockerignore  .env.example  .gitignore  AI_Artist_Agent_Projekttracker.xlsx  CHANGE_REQUESTS.md  Dockerfile  MANUAL.md  PROJECT_ORCHESTRATION_TRACKER.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  status_project.md
backend/: __init__.py  adapter_factory.py  adapter_gate_contracts.py  adapter_results.py  adapter_secrets.py  api_contracts.py  app.py  audit.py  audit_contracts.py  audit_storage.py  canonical_hash.py  classification_contracts.py  cli.py  comfyui_adapter.py  comfyui_contracts.py  composition.py  connection_settings.py  critic_curator.py  critic_rubric.py  execution_gate.py  execution_gate_messages.py  file_scanning.py  github_adapter.py  github_contracts.py  health_contracts.py  http_methods.py  image_provenance.py  interface_types.py  knowledge.py  knowledge_contracts.py  llm_api_contracts.py  llm_api_smoke.py  mapping_utils.py  markdown_utils.py  media_release_gate.py  mock_agent_contracts.py  model_coercion.py  numeric_utils.py  observability.py  openai_smoke.py  (+45 more)
docs/: backend_stack_setup_latest_v1.md  cli_manual_latest_v1.md  final_stack_specs_latest_v1.md  production_runbook_latest_v1.md
local-ai-agent-system-latest-source/: README.md  SKILL.md
scripts/: run_t24_unit_ci.ps1  start_thestone_04_bot.ps1  start_thestone_07_bot.ps1
tests/: cache_entry_helpers.py  connection_env_helpers.py  execution_envelope_helpers.py  gated_adapter_helpers.py  human_approval_helpers.py  image_provenance_helpers.py  llm_api_smoke_helpers.py  (+89 more)
(+287 files in other folders)
