[project]
name = "ai-artist"
version = "0.1.0"
description = "AI-Artist local safety service scaffold."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "httpx>=0.27,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.0,<8.0",
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "pytest-cov>=7.0,<8.0",
  "ruff>=0.5,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
